--- a/__test__.html
+++ b/__test__.html
@@ -1,46 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+  <body>
+    <div>
+      <h1>Test content</h1>
+      <p>
+        our answer could be improved with additional supporting information.
+        Please edit to add further details, such as citations or documentation,
+        so that others can confirm that your answer is correct. You can find
+        more information on how to write good answers in the help center. –
+        Community Bot
+      </p>
+    </div>
 
-<body>
-  <div>
-    <h1>Test content</h1>
-    <p>
-      our answer could be improved with additional supporting information. Please edit to add further details, such as
-      citations or documentation, so that others can confirm that your answer is correct. You can find more information
-      on how to write good answers in the help center. –
-      Community
-      Bot
-    </p>
-  </div>
+    <div>
+      <ul>
+        <li>
+          <a href="">
+            our answer could be improved with additional supporting information.
+          </a>
+        </li>
 
-  <div>
-    <ul>
-      <li><a href="">our answer could be improved with additional supporting information.</a></li>
-
-      <li>
-        <a href="">
-          our answer could be improved with additional supporting information.
-        </a>
-      </li>
-      <li>
-        <a href="">
-          our answer could be improved with additional supporting information.
-        </a>
-      </li>
-      <li>
-        <a href="">
-          our answer could be improved with additional supporting information.
-        </a>
-      </li>
-    </ul>
-  </div>
-</body>
-
+        <li>
+          <a href="">
+            our answer could be improved with additional supporting information.
+          </a>
+        </li>
+        <li>
+          <a href="">
+            our answer could be improved with additional supporting information.
+          </a>
+        </li>
+        <li>
+          <a href="">
+            our answer could be improved with additional supporting information.
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          { pageLanguage: 'en' },
+          'google_translate_element',
+        )
+      }
+    </script>
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script> -->
+  </body>
 </html>
