chore: 更新测试 page

--- a/__test__.html
+++ b/__test__.html
@@ -10,51 +10,82 @@
   <body>
     <div>
       <h1>Test content</h1>
-      <p>
-        our answer could be improved with additional supporting information.
-        Please edit to add further details, such as citations or documentation,
-        so that others can confirm that your answer is correct. You can find
-        more information on how to write good answers in the help center. –
-        Community Bot
-      </p>
+      <h2>Please use dev-go to translate this page</h2>
+
+      <div>
+        <h3>Test paragraph</h3>
+        <p>
+          our answer could be improved with additional supporting information. Please edit to add
+          further details, such as citations or documentation, so that others can confirm that your
+          answer is correct. You can find more information on how to write good answers in the help
+          center. – Community Bot
+        </p>
+      </div>
     </div>
 
     <div>
+      <h3>Test list and link</h3>
       <ul>
         <li>
-          <a href="">
-            our answer could be improved with additional supporting information.
-          </a>
-        </li>
-
-        <li>
-          <a href="">
-            our answer could be improved with additional supporting information.
-          </a>
+          You can find more information on
+          <a href="">test link</a>
+          how to write good answers in the help center
         </li>
         <li>
-          <a href="">
-            our answer could be improved with additional supporting information.
-          </a>
-        </li>
-        <li>
-          <a href="">
-            our answer could be improved with additional supporting information.
-          </a>
+          You can find more information on
+          <a href="">test link</a>
+          how to write good answers in the help center
         </li>
       </ul>
     </div>
-    <!-- <script type="text/javascript">
-      function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-          { pageLanguage: 'en' },
-          'google_translate_element',
-        )
-      }
-    </script>
-    <script
-      type="text/javascript"
-      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
-    ></script> -->
+
+    <div>
+      <h3>Test code</h3>
+      <pre>
+        <code>
+          const test = 'test';
+          console.log(test);
+        </code>
+        <code>
+          const a = 123; 
+          function test (){
+            let b=333;
+          }
+        </code>
+      </pre>
+    </div>
+
+
+    <div>
+      <h3>Test table</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>Test</th>
+            <th>Test</th>
+            <th>Test</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Test</td>
+            <td>Test</td>
+            <td>Test</td>
+          </tr>
+        </tbody>
+    </div>
+
   </body>
 </html>
+<!-- <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement(
+        { pageLanguage: 'en' },
+        'google_translate_element',
+      )
+    }
+  </script>
+  <script
+    type="text/javascript"
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+  ></script> -->
